# ai-learning

./: .gitignore  README.md  momentum_rmsprop_numpy_demo.ipynb  pyproject.toml
