[project]
name = "ai-learning"
version = "0.1.0"
description = "A collection of machine learning implementations and experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0,<2.0",
    "matplotlib>=3.10.0",
    "jupyter>=1.1.0",
]

[tool.uv]
dev-dependencies = []

